# envoy-cli

./: .gitignore  README.md  pyproject.toml
envoy_cli/: __init__.py  audit.py  clone.py  compare.py  crypto.py  diff.py  env_access.py  env_alias.py  env_archive.py  env_cast.py  env_category.py  env_checkpoint.py  env_comment.py  env_copy.py  env_default.py  env_deprecate.py  env_deprecate_cmd.py  env_docs.py  env_expire.py  env_flag.py  env_format.py  env_freeze.py  env_group.py  env_immutable.py  env_inherit.py  env_link.py  env_mask.py  env_namespace.py  env_note.py  env_placeholder.py  env_prefix.py  env_priority.py  env_readonly.py  env_regex.py  env_rename_profile.py  env_required.py  env_scope.py  env_sensitive.py  env_sequence.py  env_set.py  (+30 more)
tests/: test_access_cmd.py  test_archive_cmd.py  test_audit.py  test_clone.py  test_compare.py  test_crypto.py  test_deprecate_cmd.py  test_diff.py  test_diff_cmd.py  test_env_access.py  test_env_alias.py  test_env_archive.py  test_env_cast.py  test_env_category.py  test_env_checkpoint.py  test_env_comment.py  test_env_copy.py  test_env_default.py  test_env_deprecate.py  test_env_docs.py  test_env_expire.py  test_env_flag.py  test_env_format.py  test_env_freeze.py  test_env_group.py  test_env_immutable.py  test_env_inherit.py  test_env_link.py  test_env_mask.py  test_env_namespace.py  test_env_note.py  test_env_placeholder.py  test_env_prefix.py  test_env_priority.py  test_env_readonly.py  test_env_regex.py  test_env_rename_profile.py  test_env_required.py  test_env_scope.py  test_env_sensitive.py  (+48 more)
(+46 files in other folders)
